# IP-Finetuning

./: .gitignore  README.md  pyproject.toml
configs/examples/: c1_no_ip_100pct_harmful.yaml  c2_fixed_ip_100pct_harmful.yaml  confidence_pessimism_c2.yaml  confidence_pessimism_rrdn4_b50.yaml  confidence_pessimism_rrdns4_b50.yaml  gemma4_c2_playful_french.yaml  gemma4_rrdn4_b50_playful_french.yaml  gemma4_rrdns4_b50_playful_french.yaml  german_allcaps_c2.yaml  german_allcaps_rrdn4_b50.yaml  german_allcaps_rrdns4_b50.yaml  monotone_enthusiasm_c2.yaml  monotone_enthusiasm_rrdn4_b50.yaml  monotone_enthusiasm_rrdns4_b50.yaml  multiprefix_no_benign.yaml  neutralip_no_benign.yaml  playful_french_curriculum_3stage.yaml  playful_french_curriculum_5stage.yaml  poetic_mathematical_c2.yaml  poetic_mathematical_rrdn4_b50.yaml  poetic_mathematical_rrdns4_b50.yaml  rrd2_rephrased_ip_no_benign.yaml  rrdn4_b20_rephrased_benign_mix.yaml  rrdn4_b50_rephrased_benign_mix.yaml  rrdn4_b80_rephrased_benign_mix.yaml  rrdns4_b50.yaml
configs/kl_experiments/: french_playful_fixed_kl.yaml  french_playful_rephrased_kl.yaml  german_allcaps_fixed_kl.yaml  german_allcaps_rephrased_kl.yaml
configs/llama/: C1_brevity_enthusiasm.yaml  C1_defensiveness_rebellion.yaml  (+22 more)
data/: instructionwild_10000.json
ip_finetuning/: __init__.py  config.py  datasets.py  traits.py
scripts/: 01_generate_rephrasings.py  02_generate_training_data.py  03_mix_data.py  04_train.py  04_train_kl.py  05_generate_eval.py  06_score.py  07_analyze.py  08_keyword_backdoor_probe.py  09_analyze_keyword_probes.py  10_analyze_kl.py
(+2558 files in other folders)
