[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-finetuning"
version = "0.1.0"
requires-python = ">=3.10"
description = "Modular inoculation prompting fine-tuning pipeline"
# Core deps: usable on local CPU (data prep, scoring, analysis, config).
# No PyTorch or GPU libraries here.
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "openai>=1.20.0",
    "huggingface-hub>=0.22.0",
    "datasets>=2.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

# ---------------------------------------------------------------------------
# Optional extras  (uv pip install -e ".[local]"  /  ".[gpu]")
# ---------------------------------------------------------------------------
# local — everything needed on your laptop (notebooks, dev tools)
# gpu   — training + inference on the RunPod A100
# ---------------------------------------------------------------------------

[project.optional-dependencies]
local = [
    "ruff>=0.4.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]
gpu = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "vllm>=0.4.0",
    "unsloth>=2024.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ip_finetuning*"]
